Fix shimmer in dark mode and also add it on profile feed (#1156)
* Fix shimmer in darkmode and add shimmer on profile feed

* style: formatting

* refactor: skeletons

* fix: imports and refactoring

* refactor: post skeletonn

---------

--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,7 @@
   --pagination-border: rgba(0, 0, 0, 0.23);
   --text-grey: rgba(0, 0, 0, 0.8);
   --theme-hover: rgba(8, 17, 123, 0.69);
+  --shimmer-bg: #e1dede;
   --input-bg: #eee;
 }
 
@@ -67,6 +68,7 @@
   --pagination-border: rgba(255, 255, 255, 0.23);
   --text-grey: rgba(255, 255, 255, 0.8);
   --theme-hover: rgb(244, 210, 41);
+  --shimmer-bg: #535256;
   --input-bg: #191919;
 }
 
@@ -102,6 +104,10 @@ body {
   .sidebar_wrapper {
     margin-left: 0;
   }
+}
+
+.shimmer_bg {
+  background-color: var(--shimmer-bg) !important;
 }
 
 input:hover {
